Add endpoints to retrieve list of subjects (#27)
* feat: subject model

* feat: add subject service

* feat: add subjects controller

* feat: generate routes/spec
